[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/entities/Boat.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ressources/theme/buttonTheme.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Boat" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="UI" type="Control" parent="."]
margin_left = -960.0
margin_top = -544.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="UI" instance=ExtResource( 3 )]
visible = false

[node name="GameUI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MoveButton" type="Button" parent="UI/GameUI"]
anchor_left = 0.433
anchor_top = 0.94
anchor_right = 0.5
anchor_bottom = 0.999
margin_left = 0.639954
margin_top = 0.039917
margin_bottom = 0.0838623
theme = ExtResource( 4 )
toggle_mode = true
pressed = true
text = "Move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootButton" type="Button" parent="UI/GameUI"]
anchor_left = 0.5
anchor_top = 0.94
anchor_right = 0.567
anchor_bottom = 0.999
margin_top = 0.039917
margin_right = -0.640015
margin_bottom = 0.0838623
theme = ExtResource( 4 )
toggle_mode = true
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="UI/GameUI/MoveButton" to="." method="_on_MoveButton_toggled"]
[connection signal="toggled" from="UI/GameUI/ShootButton" to="." method="_on_ShootButton_toggled"]
